# scVAE-Annotator

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_REPORT.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART_TESTING.md  README.md  REFACTORING_FINAL_REPORT.md  REFACTORING_SUMMARY.md  REFERENCES.md  REPOSITORY_FEEDBACK.md  SECURITY.md  TECHNICAL_APPENDIX.md  TESTING_GUIDE.md  TEST_REPORTS_INDEX.txt  TEST_SUMMARY_QUICK_REFERENCE.txt  TEST_VALIDATION_SUMMARY.md  TEST_VALIDATION_SUMMARY.txt  TROUBLESHOOTING.md  VALIDATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  scvae_annotator.py.OLD  setup.py
.github/: CI_CD_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
docs/: 10X_GENOMICS_GUIDE.md  README.md  SCIENTIFIC_GUIDE.md
examples/: README.md  basic_example.py  cli_examples.sh  colab_10x_demo.ipynb  colab_10x_demo1.ipynb  pbmc_10k_complete_pipeline.py
figures/: README.md
src/scvae_annotator/: __init__.py  __main__.py  annotator.py  cli.py  clustering.py  config.py  model.py  pipeline.py  preprocessing.py  tenx_loader.py  vae.py  visualization.py
tests/: README.md  test_annotator.py  test_clustering.py  test_config.py  test_integration.py  test_model.py  test_preprocessing.py  test_preprocessing_extended.py  test_scientific_vae.py  test_tenx_loader.py  test_vae.py
