[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scvae-annotator"
version = "0.1.0"
description = "A deep learning-based tool for automated cell type annotation in single-cell RNA-sequencing data"
readme = "README.md"
authors = [
    {name = "scVAE-Annotator Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "leidenalg>=0.9.0",
    "python-igraph>=0.10.0",
    "tensorflow>=2.10.0",
    "torch>=1.12.0",
    "scikit-learn>=1.1.0",
    "imbalanced-learn>=0.10.0",
    "harmony-pytorch>=0.1.0",
    "harmonypy>=0.0.6",
    "optuna>=3.0.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "xgboost>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/or4k2l/scVAE-Annotator"
Documentation = "https://scvae-annotator.readthedocs.io/"
Repository = "https://github.com/or4k2l/scVAE-Annotator.git"
Issues = "https://github.com/or4k2l/scVAE-Annotator/issues"

[project.scripts]
scvae-annotate = "scvae_annotator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
